--- a/container/site.conf
+++ b/container/site.conf
@@ -2,8 +2,27 @@
 server {
     server_name .~~FROM~~;
     error_log   /var/log/nginx/~~FROM~~_~~TO~~_error.log warn;
-    access_log /var/log/ngnix/~~FROM~~_~~TO~~_acces.log;
+    access_log /var/log/nginx/~~FROM~~_~~TO~~_access.log;
+    include nginxconfig.io/letsencrypt.conf;
     location / {
-        return 301 ~~TO_URL~~
+        return 301 ~~TO_URL~~;
+    }
+}
+# HTTPS
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name .~~FROM~~;
+    error_log /var/log/nginx/~~FROM~~_~~TO~~_error.log warn;
+    access_log /var/log/nginx/~~FROM~~_~~TO~~_access.log;
+
+    # SSL
+    ssl_certificate /etc/letsencrypt/live/~~FROM~~/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/~~FROM~~/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/~~FROM~~/chain.pem;
+
+    location / {
+        return 301 ~~TO_URL~~;
     }
 }
