--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     volumes: 
     - ./config/:/storage/config/:ro
     - ./logs/:/var/log/nginx/
-    - ./certs/:/etc/letsencrypt/archive/
+    - ./certs/:/etc/letsencrypt/
+    #- ./nginx/:/etc/nginx/ # TEST
     ports:
       - "80:80"
       - "443:443"
